--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -158,7 +158,7 @@ jobs:
 
   fuse-harness:
     name: FUSE harness
-    runs-on: [self-hosted, fine-tuned-systemd-sandbox]
+    runs-on: [self-hosted, nixos, x86-64-v3]
     env:
       AGENTFS_FUSE_ALLOW_OTHER: 0
 
@@ -179,6 +179,14 @@ jobs:
         run: |
           direnv allow .
           direnv export gha > "$GITHUB_ENV"
+
+      - name: Verify passwordless sudo
+        run: |
+          if ! command -v sudo >/dev/null 2>&1; then
+            echo "sudo not installed on runner" >&2
+            exit 1
+          fi
+          sudo -n true
 
       - name: Ensure /dev/fuse is available
         run: |
@@ -318,11 +326,16 @@ jobs:
   pjdfstest:
     name: pjdfstest suite
     needs: fuse-harness
-    runs-on: [self-hosted, fine-tuned-systemd-sandbox]
+    runs-on: [self-hosted, nixos, x86-64-v3]
 
     steps:
       - name: Test passwordless `sudo`
-        run: sudo true
+        run: |
+          if ! command -v sudo >/dev/null 2>&1; then
+            echo "sudo not installed on runner" >&2
+            exit 1
+          fi
+          sudo -n true
 
       - uses: actions/checkout@v5
         with:
