ci: add fuse compatibility harness   - Added F9 compatibility harness to exercise fusermount and fusermount3 mount/unmount flows with structured logs.   - Wired the harness into Justfile and fuse-harness CI job; local run logged at logs/fuse-compat-20251121-143907/summary.json.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -251,6 +251,11 @@ jobs:
           just test-fuse-security-sandbox
           just test-fuse-security-robustness
 
+      - name: Run F9 compatibility harness
+        env:
+          SKIP_FUSE_BUILD: 1
+        run: just test-fuse-compat
+
       - name: Run FUSE performance harness
         env:
           SKIP_FUSE_BUILD: 1
